--- a/_source/bathroom-with-r/2016-08-01-bathroom-with-r.Rmd
+++ b/_source/bathroom-with-r/2016-08-01-bathroom-with-r.Rmd
@@ -12,7 +12,7 @@ R has been an indispensable tool since I started working with it about five year
 I would never had expected that R would also be the go-to tool for decorating our bathrooms. When looking for inspiration online and in showrooms we came across many ugly and boring examples. Just when we were about to settle for a design like this 
 ![Ugly bathroom](/images/2016-08-01/ugly_bathroom.jpg)
 
-we came to the luminous idea to create a random pattern from a few colors we liked. It is very difficult for human beings to produce a random pattern, since we tend to avoid clutters of the same color. Of course R's random number generator does not suffer from this. Turning the random pattern into a nice design is (of course!) done with `geom_tile` from `ggplot2`. It is funny how you keep underestimating randomness, even when you work with data daily. I was looking for a nicely scattered design of the colors, rather we got *Tetris-on-steroids patterns* like this
+we came to the luminous idea to create a random pattern from a few colors we liked. It is very difficult for human beings to produce a random pattern, since we tend to avoid clutters of the same color. Of course R's random number generator does not suffer from this. Turning the random pattern into a nice design is (of course!) done with `geom_tile` from `ggplot2`. It is funny how you keep underestimating randomness, even when you work with data daily. I was looking for a nicely scattered design of the four colors we selected, rather we got *Tetris-on-steroids patterns* like this
 ![True random](/images/2016-08-01/true_random.jpg)
 
 Nature needed to be a bit constrained in order to produce the design we were after. An adjustment was made to the function by adding a parameter for the maximum number of adjacent tiles of the same color. Allowing for two adjacent tiles of the same color gave us a very nice result.
