--- a/_source/2016-08-01-bathroom-with-r.Rmd
+++ b/_source/2016-08-01-bathroom-with-r.Rmd
@@ -2,21 +2,25 @@
 layout: post
 categories: blog
 title: Designing our bathroom with R
-date: "2016-08-05 15:57:55"
+base-url: https://EdwinTh.github.io
+date: "2016-08-10 21:14:50"
+tags: [random pattern, bathroon design, R, geom_tile]
 ---
-R has been an indespensable tool since I started working with it about five years ago. Of course in my day job as a data scientis I couldn't live without it, but it also is great aid in my private life. Recently we bought our first house and R came to the rescue several times in the process. We compared the impact of different mortgages on our finances in ten en twenty years time and I kept an eye on our spending through a Shiny app (I'll admit the latter would have been less time consumig if I would have done it in Excel, like normal people.)
 
-I would never had expected that R would also be the go-to tool for decorating our bathrooms. When looking for inspiration online and in showrooms we came across many ugly and boring examples. Just when we were about to settle for a design like this we came to the luminous idea to the create a random pattern from a few colors we liked.
-![My helpful screenshot]({{ site.url }}/images/bio-photo.jpg)
+R has been an indispensable tool since I started working with it about five years ago. Of course in my day job as a data scientist I couldn't live without it, but it also proved to be a great aid in private life. Recently we bought our first house and R came to the rescue several times in the process. We compared the impact of different mortgages on our finances in ten and twenty years time and I kept an eye on our spending through a Shiny app (I'll admit the latter would have been less time consuming if I would have done it in Excel, like normal people).
 
-It is very difficult for human beings to produce a random pattern, since we tend to avoid clutters of the same color. Of course R's random number generator does not suffer from this, paired with `geom_tile` from `ggplot2` we could easily produce a nice design. Eventually we went for a middle way by restricting the number of adjacent tiles from the same color to two. To avoid a *Tetris-on-steroids pattern* like this
+I would never had expected that R would also be the go-to tool for decorating our bathrooms. When looking for inspiration online and in showrooms we came across many ugly and boring examples. Just when we were about to settle for a design like this 
+![Ugly bathroom](/images/2016-08-01/ugly_bathroom.jpg)
 
-We are very pleased with the result.
+we came to the luminous idea to create a random pattern from a few colors we liked. It is very difficult for human beings to produce a random pattern, since we tend to avoid clutters of the same color. Of course R's random number generator does not suffer from this. Turning the random pattern into a nice design is (of course!) done with `geom_tile` from `ggplot2`. It is funny how you keep underestimating randomness, even when you work with data daily. I was looking for a nicely scattered design of the four colors we selected, rather we got *Tetris-on-steroids patterns* like this
+![True random](/images/2016-08-01/true_random.jpg)
 
-Here's the function that was used. Go ahead and redecorate your own bathroom!
+Nature needed to be a bit constrained in order to produce the design we were after. An adjustment was made to the function by adding a parameter for the maximum number of adjacent tiles of the same color. Allowing for two adjacent tiles of the same color gave us a very nice result.
+![Bathroom](/images/2016-08-01/bathroom.jpg)
 
+Here are the functions that were used, the first two are helpers for the main function. Go ahead and redecorate your own bathroom!
 
-```r
+```{r, warning = FALSE, return = FALSE, message= FALSE}
 library(ggplot2)
 library(dplyr)
 library(data.table)
@@ -25,7 +29,8 @@ library(magrittr)
 # helper function that checks for the next tile to be sampled if there
 # are any colors that should be excluded because the max adjacent was
 # reached either vertically or horizontally
-check_colors <- function(cur_width,
+check_colors <- function(plot_data,
+                         cur_width,
                          cur_height,
                          m_a){
   if(cur_height > m_a){
@@ -33,9 +38,10 @@ check_colors <- function(cur_width,
       plot_data[Height %in% (cur_height-(m_a)):(cur_height-1) &
                   Width == cur_width, color] %>% unique
   } else {
+    
     colors_height <- NULL
   }
-
+  
   if(cur_width > m_a){
     colors_width <-
       plot_data[Width %in% (cur_width-(m_a)):(cur_width-1) &
@@ -43,12 +49,12 @@ check_colors <- function(cur_width,
   } else {
     colors_width <- NULL
   }
-
+  
   if(length(colors_height) > 1) colors_height <- NULL
   if(length(colors_width) > 1) colors_width <- NULL
   exclude <- c(colors_height, colors_width)
   if(length(exclude) == 0) exclude <- 0
-
+  
   return(exclude)
 }
 
@@ -56,11 +62,11 @@ check_colors <- function(cur_width,
 # excluding a color if necesarry. Returns the sample color and the vector with
 # remaining colors for the next iteration.
 sample_color <- function(exclude = 0,
-                         cts = colors_to_sample){
+                         cts){
   if(cts %>% is_in(exclude) %>% all){
-    stop('There is no valid solution for this seed, please try another')
+    stop('There is no valid solution due to adjacency constraint, please try again')
   }
-
+  
   valid_color <- FALSE
   while(valid_color == FALSE){
     color <- sample(cts, 1)
@@ -80,33 +86,33 @@ tiles_pattern <- function(
   nr_of_each_col = rep(40, 4),     # prevalence of each color in colors vector
   nr_height      = 8, # nr of tiles in vertical direction
   nr_width       = 20, # nr of tiles in horizontal directions
-  max_adjacent   = 2) # maximimum nr of adjacent tiles of the same color
-  {
-
+  max_adjacent   = 2)  # maximimum nr of adjacent tiles of the same color
+{
+  
   if(length(colors) != length(nr_of_each_col)){
     stop('nr_of_each_col vector should be same length as the colors vector')
   }
   if(sum(nr_of_each_col) != nr_height * nr_width){
     stop('Sum nr_of_each_col should equal nr_height * nr_width')
   }
-
+  
   plot_data <- expand.grid(1:nr_height, 1:nr_width) %>% as.data.table
   colnames(plot_data) <- c('Height', 'Width')
   plot_data$color <- integer(nrow(plot_data))
-
+  
   colors_to_sample <- rep(1:length(colors), nr_of_each_col)
-
+  
   for(i in 1:(nr_width)){
     for(j in 1:nr_height){
-      exclude_iter     <- check_colors(i, j, max_adjacent)
+      exclude_iter     <- check_colors(plot_data, i, j, max_adjacent)
       color_iter       <- sample_color(exclude_iter, colors_to_sample)
       plot_data[Height == j & Width == i, color := color_iter$color]
       colors_to_sample <- color_iter$cts
     }
   }
-
+  
   plot_data[ ,color := color %>% as.character]
-
+  
   # build the plot
   ggplot(plot_data, aes(Width, Height)) +
     geom_tile(aes(fill = color), col = 'grey') +
