some minor changes to blog 2

--- a/_source/2016-11-26-column-selecter.Rmd
+++ b/_source/2016-11-26-column-selecter.Rmd
@@ -51,9 +51,9 @@ col_select <- function(df,
 
 Maybe the following sounds familiar. You have a large data set with many, many columns of which the most are irrelevant to you. Typically, a dump from a database or the full set extracted from an API. Several times I found myself the better part of an afternoon going back and forth between a view of the data where I tried to figure out which columns to keep, and an R session where I wrote the code for creating the subset of columns. Wouldn't it be nice to have an app in which you could just click the columns you would like to keep? This seemed a perfect opportunity to get my feet wet with Shiny gadgets, which I still wanted to do since I first heard about it on useR2016.
 
-I did not really have a feel for how difficult it would be to build something like this. All I knew was that I probably needed `DT` to show an interactive data frame. Well it proved very easy to build a tool like this, I was just baffled by how easy it was. Due to the fine documentation of the Shiny functionalities, and excellent examples by [Yihui Xie](https://yihui.shinyapps.io/DT-selection/) and [Joe Cheng](http://shiny.rstudio.com/articles/gadgets.html), I had it working before I knew it. You have to give it up to these guys from RStudio. When you enable someone with barely any knowledge of JavaScript, CSS and html to build an app in a few hours, you certainly are doing something right.
+I did not really have a feel for how difficult it would be to build something like this. All I knew was that I probably needed `DT` to show an interactive data frame. Well it proved very easy to build a tool like this, I was just baffled by how easy it was. Due to the fine documentation of the Shiny functionalities, and excellent examples by [Yihui Xie](https://yihui.shinyapps.io/DT-selection/) and [Joe Cheng](http://shiny.rstudio.com/articles/gadgets.html), I had it working before I knew. You have to give it up to these guys from RStudio. When you enable someone with barely any knowledge of JavaScript, CSS and html to build an app in an evening, you certainly are doing something right.
 
-You simply run the function `col_select` on a data frame and the mini ui opens. You click the columns you want to keep and store these in a new object like this:
+So here is how to do it. You simply run the function `col_select` on a data frame and the mini ui opens. You click the columns you want to keep and store these in a new object like:
 
 ```{r, eval = FALSE}
 Batting_rel <- col_select(Lahman::Batting)
@@ -61,7 +61,7 @@ Batting_rel <- col_select(Lahman::Batting)
 
 ![screenshot](/images/2016-11-26/col_sel_screenshot.png)
 
-The downside of applying the function in this way is its lack of reproducibility. Therefore, it is possible to return the `dplyr` code that makes the selection, instead of the selection itself. The code will be inserted in the R script. In the next example the second line is inserted by running the app and selecting the first four columns.
+The downside of applying the function in this way, is its lack of reproducibility. Therefore, it is possible to return the `dplyr` code that makes the selection, instead of the selection itself. The code will be inserted in the R script. In the next example the second line is inserted by running the app and selecting the first four columns.
 
 ```{r, eval = FALSE}
 col_select(Lahman::Batting, ret = 'dplyr_code')
@@ -111,6 +111,8 @@ col_select <- function(df,
   }
 }
 ```
+
+
 
 
 
