edit to unique_id

--- a/_posts/2017-07-20-unique_id.md
+++ b/_posts/2017-07-20-unique_id.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 categories: blog
-title: "Quickly Check your id Variables"
+title: "Quickly Check your ID Variables"
 base-url: https://EdwinTh.github.io
 date: "2017-07-20 19:16:00"
 output: html_document
@@ -23,8 +23,8 @@ some_df %>% unique_id(a)
 ## # A tibble: 2 x 3
 ##       a     b   val
 ##   <dbl> <int> <dbl>
-## 1     3   103  -1.8
-## 2     3   104   1.1
+## 1     3   103  -0.4
+## 2     3   104  -0.9
 ```
 
 ```r
@@ -46,7 +46,7 @@ unique_id <- function(x, ...) {
     TRUE
   } else {
     non_unique_ids <- id_set %>% 
-      filter(id_set %>% duplicated) %>% 
+      filter(id_set %>% duplicated()) %>% 
       distinct()
     suppressMessages(
       inner_join(non_unique_ids, x) %>% arrange(...)
