--- a/_source/2017-08-24-dplyr-recipes.Rmd
+++ b/_source/2017-08-24-dplyr-recipes.Rmd
@@ -1,15 +1,18 @@
 ---
+layout: post
+categories: blog
 title: "Tidy evaluation, most common actions"
-author: "Edwin Thoen"
-date: "8/24/2017"
+base-url: https://EdwinTh.github.io
+date: "2017-08-25 20:30:00"
 output: html_document
+tags: [R, dplyr, tidy evaluation, programming]
 ---
+
+Tidy evaluation is a bit challenging to get your head around. Even after reading [programming with dplyr](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) several times, I still struggle when creating functions from time to time. I made a small summary of the most common actions I perform, so I don't have to dig in the vignettes and on stackoverflow over and over. Each is accompanied with a minimal example on how to implement it. I thought others might find this useful too, so here it is in a blog post. This list is meant to be a living thing so additions and improvements are most welcome. Please do a PR on [this file](https://github.com/EdwinTh/EdwinTh.github.io/tree/master/_source/2017-08-24-dplyr-recipes.Rmd) or send an email.
+
 ```{r, warning=FALSE, message=FALSE}
 library(tidyverse)
 ```
-
-Tidy evaluation is a bit challenging to get your head around. Even after reading [programming with dplyr](https://cran.r-project.org/web/packages/dplyr/vignettes/programming.html) several times, I still struggle when creating function with `dplyr` from time to time. I made a small summary of the most common actions I perform. Each is accompanied with a minimal example on how to implement it. I thought others might find this useful too, so here it is in a blog post. This list is meant to be a living thing so additions and improvements are most welcome. Please do a PR on [this file](https://github.com/EdwinTh/EdwinTh.github.io/tree/master/_source/2017) or send an email.
-
 #### bare to quosure: `quo`
 ```{r}
 bare_to_quo <- function(x, var){
@@ -43,10 +46,10 @@ quo_to_text <- function(x, var) {
   var_enq <- enquo(var)
   ggplot(x, aes_string(rlang::quo_text(var_enq))) + geom_density()
 }
-quo_to_text(mtcars, cyl)
+plt <- quo_to_text(mtcars, cyl)
 ```
 
-Note tidy evaluation is not yet implemented in `ggplot2`, but this will be in future versions. This is a workaround for the meantime, when combining `dplyr` and `ggplot2`.
+Note that tidy evaluation is not yet implemented in `ggplot2`, but this will be in future versions. This is a workaround for the meantime, when combining `dplyr` and `ggplot2`.
 
 #### character to quosure: `sym`
 
@@ -77,7 +80,7 @@ bare_to_quo_mult_chars(mtcars, list("vs", "cyl"))
 ```
 #### quoting full expressions
 
-Although quoting column names is most often the case, it is by no means the only option. We can use the above to quote full expressions.
+Altough quoting column names is most often used, it is by no means the only option. We can use the above to quote full expressions.
 
 ```{r}
 filter_func <- function(x, filter_exp) {
@@ -86,4 +89,3 @@ filter_func <- function(x, filter_exp) {
 }
 filter_func(mtcars, hp == 93)
 ```
-
