--- a/_source/2017-08-24-dplyr-recipes.Rmd
+++ b/_source/2017-08-24-dplyr-recipes.Rmd
@@ -51,7 +51,7 @@ plt <- quo_to_text(mtcars, cyl)
 
 Note that tidy evaluation is not yet implemented in `ggplot2`, but this will be in future versions. This is a workaround for the meantime, when combining `dplyr` and `ggplot2`.
 
-#### character to quosure: `sym`
+#### character to name: `sym` (edited)
 
 ```{r}
 char_to_quo <- function(x, var) {
@@ -70,7 +70,7 @@ bare_to_quo_mult <- function(x, ...) {
 bare_to_quo_mult(mtcars, vs, cyl)
 ```
 
-#### multiple characters to quosure: `syms`
+#### multiple characters to names: `syms` (edited)
 ```{r}
 bare_to_quo_mult_chars <- function(x, ...) {
   grouping <- rlang::syms(...)
@@ -78,6 +78,7 @@ bare_to_quo_mult_chars <- function(x, ...) {
 }
 bare_to_quo_mult_chars(mtcars, list("vs", "cyl"))
 ```
+
 #### quoting full expressions
 
 Altough quoting column names is most often used, it is by no means the only option. We can use the above to quote full expressions.
@@ -89,3 +90,15 @@ filter_func <- function(x, filter_exp) {
 }
 filter_func(mtcars, hp == 93)
 ```
+
+#### Edit notes
+
+I mistakingly thought that `rlang::sym(s)` created quosures. However, as pointed out to me by a reader, this creates a `name`, not a `quosure`. A `name` however can also be unquoted. See this [github discussion](https://github.com/tidyverse/rlang/issues/116).
+
+```{r}
+just_a_name <- rlang::sym("cyl")
+class(just_a_name)
+mtcars %>% select(!!just_a_name) %>% head(1)
+```
+
+
